# fake_news

./: .gitignore  README.md  experiments.ipynb  pyproject.toml
src/fake_news/: __init__.py
