[project]
name = "fake-news"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Aksel Rasmussen", email = "aksel@hybridgreentech.com" }
]
dependencies = [
    "pandas>=2.2.3",
    "jupyter>=1.1.1",
    "scikit-learn>=1.6.1",
    "plotly>=6.0.0",
    "nltk>=3.9.1",
    "jupyterlab-lsp>=5.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fake_news"]
